#6 App: Add Home page Heading section (above categories) to support - restaurant image and short description, detailed description (expandable).

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,6 +6,9 @@
 					<button menuClose ion-item (click)="openProfile()" class="-b5">
 						{{ 'menu.profile' | translate }}
 					</button>
+          <button menuClose ion-item (click)="openProfile()" class="-b5">
+            {{ 'menu.profile' | translate }}
+          </button>
 					<button menuClose ion-item (click)="logout()" class="-b7">
 						{{ 'menu.logout' | translate }}
 					</button>
