--- a/src/pages/catalog/categories/categories.scss
+++ b/src/pages/catalog/categories/categories.scss
@@ -11,3 +11,14 @@
     font-weight: normal;
   }
 }
+
+.homeimage {
+  margin:-25% 0 -25% 0;
+  width:100%;
+}
+
+.restaurant-title {
+  text-align: center;
+  font-weight: 600;
+  height: 120%
+}
