--- a/src/pages/catalog/categories/categories.scss
+++ b/src/pages/catalog/categories/categories.scss
@@ -2,10 +2,11 @@
   padding-top: 120px;
   background-size: cover !important;
   background-position: center center;
+  margin-bottom: 10px;
   .title {
     text-align: center;
-    color: #fff;
-    background: rgba(155, 155, 155, 0.93);
+    color: #999;
+    background: rgba(240, 240, 240, 0.85);
     font-size: 24px;
     padding: 10px 15px;
     font-weight: normal;
