minor changes to signing up and news button

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <!-- <ion-split-pane> -->
-	<ion-menu [content]="myNav" persistent="true" type="overlay" [hidden]="loggedIn">
+	<!-- <ion-menu [content]="myNav" persistent="true" type="overlay" [hidden]="loggedIn">
 		<ion-content>
 			<div>
 				<ion-list>
@@ -18,6 +18,6 @@
 				</ion-list>
 			</div>
 		</ion-content>
-	</ion-menu>
+	</ion-menu> -->
 	<ion-nav #myNav swipeBackEnabled="false" [root]="rootPage"></ion-nav>
 <!-- </ion-split-pane> -->
