--- a/src/pages/catalog/categories/categories.scss
+++ b/src/pages/catalog/categories/categories.scss
@@ -23,3 +23,11 @@
   font-weight: 600;
   height: 120%
 }
+
+.news-button {
+  color: red;
+  margin: 20px 0 20px; 
+  float: right;
+  height: 20px;
+  font-size: 10px;
+}
