--- a/src/pages/personal/signup/signup.scss
+++ b/src/pages/personal/signup/signup.scss
@@ -25,4 +25,9 @@ page-signup, page-login {
   		width: 100%;
   	}
   }
+  .input-error {
+    color: red;
+    font-size: 12px;
+    position: center;
+  }
   }
