--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,5 +1,5 @@
 .welcome-screen {
-  background: url('../assets/welcome.jpg') center center no-repeat;
+  background: url('../assets/welcome3.jpg') center center no-repeat;
   background-size: cover;
   width: 100%;
   height: 100%;
