log out button, news tab,  parallax image and signup links

--- a/src/pages/personal/signup/signup.scss
+++ b/src/pages/personal/signup/signup.scss
@@ -15,7 +15,7 @@ page-signup, page-login {
   	text-align: center;
   	padding: 40px 0 20px 0;
   	a {
-  	  color: #fdcc52;
+  	  color: darkgray;
   	}
   }
   .scroll-content {
