--- a/src/pages/catalog/categories/categories.scss
+++ b/src/pages/catalog/categories/categories.scss
@@ -26,8 +26,15 @@
 
 .news-button {
   color: red;
-  margin: 20px 0 20px; 
-  float: right;
-  height: 20px;
+  margin: 20px 0 20px;
+  height: 30px;
   font-size: 10px;
+}
+
+.mainFeatImg {
+  height:400px;
+  background-attachment: fixed;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-color: transparent;
 }
