--- a/src/pages/ordering/address_map/address_map.scss
+++ b/src/pages/ordering/address_map/address_map.scss
@@ -24,8 +24,8 @@
   width: 90%;
   position: absolute;
   bottom: 10px;
-  padding-left: 10px;
-  padding-right: 30px;
+  padding-left: 10%;
+  
   z-index: 100700;
 }
 
