--- a/src/pages/catalog/categories/categories.scss
+++ b/src/pages/catalog/categories/categories.scss
@@ -38,3 +38,18 @@
   background-repeat: no-repeat;
   background-color: transparent;
 }
+
+
+
+  shrinking-segment-header {
+
+    background-color: #363636;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      //background-size: cover;
+    }
+  }
