added credit card validation (extra)

--- a/src/pages/ordering/order/order.scss
+++ b/src/pages/ordering/order/order.scss
@@ -2,3 +2,13 @@
   color: rgba(222, 55, 52, 0.91);
   content: "*";
 }
+
+.input-error-regular::after{
+  color: rgba(222, 55, 52, 0.91);
+  content: "*";
+}
+
+.input-error-regular {
+  color: red;
+  position: center;
+}
