--- a/src/pages/ordering/cart/cart.scss
+++ b/src/pages/ordering/cart/cart.scss
@@ -5,12 +5,67 @@
 
 .cart-total {
     font-weight: bold;
-    padding: 3px 15px;
+    padding: 15px 15px;
     background: #fff;
-    font-size: 16px;
+    font-size: 23px;
     border-top: 1px solid lighten($c_color_light, 10%);
+  text-align: center;
     &.-nob {
         border: none;
         padding: 5px 15px;
     }
+}
+
+.cart-item {
+  //background: #fff;
+  //margin: 15px 0px;
+  //&.-two-column {
+  //  margin-left: 0;
+  //  margin-right: 0;
+  //}
+  //padding-top: 10px;
+  //padding-bottom: 10px;
+  //box-shadow: 1px 1px 3px 0px #b0b0b0;
+}
+
+.item-price {
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.cart-product-info {
+  height: auto;
+  float: left;
+  width:45%;
+  margin-left: 5%;
+  h2 {
+    color: $c_color_secondary;
+    font-size: 19px;
+  }
+}
+
+.cart-product-price {
+  float: right;
+  width:45%;
+  text-align: right;
+  margin-right: 5%;
+  margin-top: 10px;
+}
+
+.clear {
+  clear:both;
+  line-height:0;
+}
+
+.extra-row {
+  display: table;
+  margin: auto;
+}
+
+.extras-container {
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border-radius: 20px;
 }
